--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ authors = ["Michael Holmes <michael.holmes@passfort.com>"]
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
 itertools = "0.9.0"
+
+[features]
+default = []
+emit_times = []
